<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/rlAboutDetail"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp">

        <TextView
            style="@style/TextViewStyle1"
            android:text="About School"/>

        <TextView
            android:id="@+id/tvSchoolAboutDescription"
            style="@style/TextViewStyle2"
            />

        <TextView
            style="@style/TextViewStyle1"
            android:text="@string/tvfaculties"/>

        <TextView
            android:id="@+id/tvFacultyName"
            style="@style/TextViewStyle2"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tvPrincipalName"
            style="@style/TextViewStyle2"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tvVicePrincipalName"
            style="@style/TextViewStyle2"
            android:visibility="gone"
            />

        <TextView
            style="@style/TextViewStyle1"
            android:text="@string/filter_management"/>

        <TextView
            android:id="@+id/tvSchoolManagement"
            style="@style/TextViewStyle2"
            />

        <TextView

            style="@style/TextViewStyle1"
            android:text="@string/title_board"
            />

        <TextView
            android:id="@+id/tvSchoolBoard"
            style="@style/TextViewStyle2"
            />

        <TextView
            style="@style/TextViewStyle1"
            android:text="@string/tvmedium"/>

        <TextView
            android:id="@+id/tvSchoolMedium"
            style="@style/TextViewStyle2"
            />


        <TextView

            style="@style/TextViewStyle1"
            android:text="@string/title_classes"
            />

        <TextView
            android:id="@+id/tvSchoolClasses"
            style="@style/TextViewStyle2"
            />



    </LinearLayout>


</RelativeLayout>
</ScrollView>