<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            tools:mockup_opacity="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

           >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:id="@+id/linear"
        >
        <ImageView
            android:id="@+id/search_icon_Img"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_weight="0.3"
            android:src="@drawable/search_icon"
           />

        <AutoCompleteTextView
            android:id="@+id/LocationAutoCompleteTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_weight="2.4"
            android:focusableInTouchMode="true"
            android:hint="@string/search"
            android:inputType="text"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            />

        <ImageView
            android:id="@+id/Current_LocationImg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_weight="0.3"
           android:src="@drawable/current_location"/>
    </LinearLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:id="@+id/RelativeFilter"
    android:layout_below="@+id/linear">


    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview_border"
       android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview_border"
       android:layout_centerInParent="true"
        android:text="@string/btn_clear_search"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <Button
        android:id="@+id/btnGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview_border"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />
        </RelativeLayout>
            <TextView
            android:id="@+id/tvNoRecordsFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/noRecordsFound"
            android:visibility="gone"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:layout_centerInParent="true"
                android:layout_below="@+id/RelativeFilter"
                />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSchooLlist"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_below="@+id/RelativeFilter"
             />

</RelativeLayout>
</ScrollView>
