<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:layout_centerInParent="true"
            >

            <TextView
                style="@style/TextViewStyle1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="@color/orangeColor"
                />
            <TextView
                android:id="@+id/tvMyfutureDescription"
                style="@style/TextViewStyle2"

                />


            <TextView
                style="@style/TextViewStyle1"
                android:gravity="center"
                android:text="@string/version"/>

            <TextView
                android:id="@+id/tvVersion"
                style="@style/TextViewStyle2"

                />

            <TextView
                style="@style/TextViewStyle1"
                android:gravity="center"
                android:text="@string/note"/>

            <TextView
            android:id="@+id/tvNote"
            style="@style/TextViewStyle2"

            />
            <TextView
                style="@style/TextViewStyle2"
                android:autoLink="phone"
                android:gravity="center"
                android:textColorLink="@color/darkBlueColor"
                android:textColor="@color/darkBlueColor"
                android:id="@+id/tvPhone"

                />
            <TextView
                style="@style/TextViewStyle2"
                android:autoLink="email"
                android:gravity="center"
                android:id="@+id/tvEmail"
                android:textColorLink="@color/darkBlueColor"
                />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>